# stellarisDesktopPlatform

./: AGENTS.md  GUIDE.md  PROMPTS.md  README.md  TECHNICAL.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: README.md
docs/architecture/: ADR-001-initial-stack.md  ADR-002-performance-strategy.md
docs/decisions/un-reviewed/: 001-platform-expansion.md
docs/meetings/: 2026-07-05-kickoff.md  2026-07-05-sprint-closure.md  2026-07-05-widget-mode.md  TEMPLATE.md
docs/project/: OVERVIEW.md  ROADMAP.md
docs/sprints/current/: GOALS.md
public/assets/models/: Star.glb
src/: index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  tray.rs
src/app/: App.tsx
src/core/animation/: AnimationController.ts  IdleAnimation.ts
src/core/desktop/: DesktopService.ts  TauriIntegration.ts
src/core/events/: EventBus.ts
src/core/graphics/: QualityManager.ts
src/core/performance/: PowerManager.ts
src/core/settings/: SettingsService.ts
src/entities/camera/: CameraService.ts
src/entities/lighting/: ScenePresets.ts
src/entities/star/: StarConfig.ts
src/features/desktop-interaction/: DesktopInteractionFeature.ts
src/features/screenshots/: ScreenshotFeature.ts
src/shared/constants/: defaults.ts  themes.ts
src/shared/types/: index.ts  (+5 more)
src/stores/: useDesktopStore.ts  useSettingsStore.ts  useStarStore.ts  useThemeStore.ts  useUIStore.ts
src/types/: three-elements.d.ts
(+15 files in other folders)
