[package]
name = "stellaris-desktop"
version = "0.1.0"
description = "Stellaris Desktop - A premium celestial desktop experience"
authors = ["Stellaris"]
edition = "2021"

[lib]
name = "stellaris_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
